# IW276WS21-P19

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker.yaml
etc/: preload-models.py
ocr_attribute_extraction/: advanced_attribute_extraction_stage.py  attribute_name.py  cli.py  dir_iterator_stage.py  document.py  json_output_stage.py  ocr_stage.py  pipeline.py  print_stage.py  simple_attribute_extraction_stage.py  spell_correction_stage.py  stage.py
