[tool.poetry]
name = "ocr-attribute-extraction"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.6.2"
tesserocr = "^2.5.2"
stanza = "^1.3.0"
nltk = "^3.6.5"
pandas = "~1.1.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
oae = "ocr_attribute_extraction.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
